--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
       </div>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase-firestore.js"></script>
       <script src="./main.js"></script>
 </body>
 </html>
