--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <title>Raktárkezelő</title>
 </head>
 <body>
       <div class="modal" id="amount" style="width: 300px;">
             <div class="modal-content">
                   <h4>Szerkeszt</h4>
-                  <form class="row" id="edit-amount-form">
+                  <form class="row edit-amount-form">
                         <input type="number" id="edit-amount-input">
                         <button class="btn blue col l12 modal-close">OK</button>
                   </form>
