add amount limit & input focus

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                               <label for="item-amount-input">Raktár</label>
                         </div>
                         <div class="input-field col">
+                              <input id="amount-limit" type="number">
+                              <label for="amount-limit">Raktár limit</label>
+                        </div>
+                        <div class="input-field col">
                               <select id="amount-unit">
                                     <option>db</option>
                                     <option>fm</option>
