--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                               </select>
                         </div>
                   </div>
+                  <div class="input-field col s12 l12">
+                        <input id="manufacturer-input" type="text">
+                        <label for="manufacturer-input">Gyártó</label>
+                  </div>
                   <input type="file" id="item-file-input">
             </div>
             <div class="modal-footer">
@@ -112,12 +116,44 @@
       </nav>
 
       <div class="container" style="margin-top: 65px;">
-            <a class="modal-trigger btn blue" id="sign-in-trigger" href="#sign-in">Bejelentkezés</a>
-            <button class="btn blue" id="sign-out-trigger" style="display: none;">Kijelentkezés</button>
-            <a class="modal-trigger btn blue" id="item-form-trigger" style="display: none;" href="#item-form">Hozzáad</a>
-            <a href="#changes" class="modal-trigger" id="changes-trigger">Legutóbbi változtatások</a>
+            <div class="flexed">
+                  <a class="modal-trigger btn blue" id="sign-in-trigger" href="#sign-in">Bejelentkezés</a>
+                  <button class="btn blue" id="sign-out-trigger" style="display: none;">Kijelentkezés</button>
+                  <a class="modal-trigger btn blue" id="item-form-trigger" style="display: none;" href="#item-form">Hozzáad</a>
+                  <a href="#changes" class="modal-trigger" id="changes-trigger">Legutóbbi változtatások</a>
+                  <div id="manufacturer-select-wrapper">
+                        
+                  </div>
+            </div>
             <ul class="collapsible" id="item-list"></ul>
       </div>
+
+      <style>
+            .flexed{
+                  display: flex;
+                  align-items: center;
+                  position: relative;
+            }
+            .flexed > *{
+                  margin: 0 4px;
+            }
+            #manufacturer-select-wrapper{
+                  position: absolute;
+                  right: 0;
+            }
+            @media (max-width: 700px){
+                  .flexed{
+                        flex-direction: column;
+                  }
+                  .flexed > *{
+                        margin: 8px 0;
+                        width: 100%;
+                  }
+                  #manufacturer-select-wrapper{
+                        position: static;
+                  }
+            }
+      </style>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase-app.js"></script>
