add list items under amount limit

--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
                   <a class="modal-trigger btn blue" id="sign-in-trigger" href="#sign-in">Bejelentkezés</a>
                   <button class="btn blue" id="sign-out-trigger" style="display: none;">Kijelentkezés</button>
                   <a class="modal-trigger btn blue" id="item-form-trigger" style="display: none;" href="#item-form">Hozzáad</a>
+                  <a class="btn blue" id="btn-under-limit">Limit alattiak</a>
                   <a href="#changes" class="modal-trigger" id="changes-trigger">Legutóbbi változtatások</a>
-                  <div id="manufacturer-select-wrapper">
-                        
-                  </div>
+                  <div id="manufacturer-select-wrapper"></div>
             </div>
             <ul class="collapsible" id="item-list"></ul>
       </div>
